# skrcoin

./: CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac  skrcoin.conf
build-aux/m4/: bitcoin_qt.m4
build_msvc/: README.md
build_msvc/test_bitcoin/: test_bitcoin.vcxproj
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
contrib/: README.md  gitian-build.py  install_db4.sh
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  (+3 more)
depends/: README.md  config.guess  config.sub  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  litecoin-conf.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-litecoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  skrcoin-cli.1  skrcoin-qt.1  skrcoin-tx.1  skrcoin-wallet.1  skrcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp.save  chainparamsseeds.h  clientversion.cpp  httpserver.cpp  init.cpp  net.cpp  net_processing.cpp  netaddress.cpp  pow.cpp  txdb.cpp  validation.cpp
test/: README.md
(+227 files in other folders)
